# DSA_2022

./: README.md
Labs/: CMakeLists.txt
Labs/introdution/headers/: function.h
Labs/introdution/src/: function.c  main.c
Labs/sapi_sales/headers/UserBST/: user_bst.h
Labs/sapi_sales/headers/array/: product_array.h  user_array.h
Labs/sapi_sales/headers/list/: user_list.h
Labs/sapi_sales/headers/manager/: lab2.h  lab2_manager.h  lab4.h  lab8.h  lab_manager.h
Labs/sapi_sales/headers/models/: product.h  user.h
Labs/sapi_sales/headers/queue/: user_queue.h
Labs/sapi_sales/headers/stack/: stack.h
Labs/sapi_sales/src/: main.c
Labs/sapi_sales/src/UserBST/: user_bst.c
Labs/sapi_sales/src/array/: product_array.c  user_array.c
Labs/sapi_sales/src/list/: user_list.c
Labs/sapi_sales/src/manager/: lab2.c  lab2_manager.c  lab4.c  lab8.c  lab_manager.c
Labs/sapi_sales/src/models/: product.c  user.c
Labs/sapi_sales/src/queue/: user_queue.c
Labs/sapi_sales/src/stack/: stack.c
Labs/shared/headers/: constans.h  errors.h  messages.h
Labs/shared/src/: errors.c  messages.c
